src/objects/Retail_Task__c.object
<CustomObject>
    <fields>
        <fullName>Guarantor2_Address_Native__c</fullName>
        <label>Guarantor2 Address (kana) - actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor2_Address__c</fullName>
        <label>Guarantor2 Address (Kanji) - actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor2_BirthDate__c</fullName>
        <label>Guarantor2 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantor2_Company_Name_Native__c</fullName>
        <label>Guarantor2 Company Name (Kana)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor2_Company_Name__c</fullName>
        <label>Guarantor2 Company Name (Kanji)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor2_Fax__c</fullName>
        <label>Guarantor2  Fax - actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor2_Gender__c</fullName>
        <label>Guarantor2 Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor2_MobilePhone__c</fullName>
        <label>Guarantor2  Phone2 - actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor2_Name_Native__c</fullName>
        <label>Guarantor2 Name (Kana)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor2_Name__c</fullName>
        <label>Guarantor2 Name (Kanji)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor2_Phone__c</fullName>
        <label>Guarantor2  Phone1 - actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor2_ZipCode__c</fullName>
        <label>Guarantor2 Zip Code - actual</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor3_Address_Native__c</fullName>
        <label>Guarantor3 Address (kana) - actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor3_Address__c</fullName>
        <label>Guarantor3 Address (Kanji) - actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor3_BirthDate__c</fullName>
        <label>Guarantor3 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantor3_Company_Name_Native__c</fullName>
        <label>Guarantor3 Company Name (Kana)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor3_Company_Name__c</fullName>
        <label>Guarantor3 Company Name (Kanji)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor3_Fax__c</fullName>
        <label>Guarantor3  Fax - actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor3_Gender__c</fullName>
        <label>Guarantor3 Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor3_MobilePhone__c</fullName>
        <label>Guarantor3  Phone2 - actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor3_Name_Native__c</fullName>
        <label>Guarantor3 Name (Kana)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor3_Name__c</fullName>
        <label>Guarantor3 Name (Kanji)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor3_Phone__c</fullName>
        <label>Guarantor3  Phone1 - actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor3_ZipCode__c</fullName>
        <label>Guarantor3 Zip Code - actual</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Date__c</fullName>
        <label>Incident Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Indemnity_Amount__c</fullName>
        <label>Indemnity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_Code__c</fullName>
        <label>Industry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N - Service</fullName>
                </value>
                <value>
                    <fullName>K - Retail/Restaurant</fullName>
                </value>
                <value>
                    <fullName>F - Manufacture</fullName>
                </value>
                <value>
                    <fullName>P - Medical Service/Welfare</fullName>
                </value>
                <value>
                    <fullName>E - Construction</fullName>
                </value>
                <value>
                    <fullName>J - Wholesale</fullName>
                </value>
                <value>
                    <fullName>L - Real Estate</fullName>
                </value>
                <value>
                    <fullName>H - Transport/Telecommunications</fullName>
                </value>
                <value>
                    <fullName>M - Finance/Insurance</fullName>
                </value>
                <value>
                    <fullName>Q - Education/Religion</fullName>
                </value>
                <value>
                    <fullName>R - Public Officer</fullName>
                </value>
                <value>
                    <fullName>C - Fishery</fullName>
                </value>
                <value>
                    <fullName>A - Agriculture</fullName>
                </value>
                <value>
                    <fullName>B - Forestry</fullName>
                </value>
                <value>
                    <fullName>D - Mining</fullName>
                </value>
                <value>
                    <fullName>G - Utility</fullName>
                </value>
                <value>
                    <fullName>S - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <label>Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Mitsui Sumitomo Insurance</fullName>
                </value>
                <value>
                    <fullName>Tokyo Marine &amp; Nichido</fullName>
                </value>
                <value>
                    <fullName>Sompo Japan Nipponkoa</fullName>
                </value>
                <value>
                    <fullName>Aioi Nissay Dowa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Rating__c</fullName>
        <label>Insurance Rating</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured_Name_Native__c</fullName>
        <label>Insured Name (Kana)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured_Name__c</fullName>
        <label>Insured Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Customer Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interface_Valid_Flag__c</fullName>
        <formula>IF( AND( Number_of_Interfaced_Contractor__c  = 0, Number_of_Interfaced_Guarantor__c  = 0) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interface Valid Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Contract_Date__c</fullName>
        <label>Latest Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Invoice_Date__c</fullName>
        <label>Latest Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Sales_Person__c</fullName>
        <label>Sales Person</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Category__c</fullName>
        <label>Lease Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operational Lease</fullName>
                </value>
                <value>
                    <fullName>Financial Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Exp_Date__c</fullName>
        <label>Lease Exp. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Remaining_Balance_With_RV__c</fullName>
        <label>Total Outstanding balance (Lease)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Remaining_Balance_Without_RV__c</fullName>
        <label>Outstanding Balance (lease without RV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Cover__c</fullName>
        <label>Level of Cover</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Principal__c</fullName>
        <label>Loan Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Remaining_Bal_Baloon_Dealer__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &apos;Subrogation&apos;),Loan_Remaining_Balance_With_Baloon__c , null)</formula>
        <label>Balance (loan with Ballon)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Remaining_Balance_With_Baloon__c</fullName>
        <label>Outstanding Balance (loan with Ballon)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MBF_Anti_Social_Force_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBF Anti social force flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBF_Comments__c</fullName>
        <label>MBF Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MBF_base_interest_rate__c</fullName>
        <label>Compensation usually interest rates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,
IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;,
IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;,&apos;NA&apos;)))))</defaultValue>
        <label>MD</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_Owner_Address__c</fullName>
        <label>MOT Owner Address</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_Owner_Name_Native__c</fullName>
        <label>MOT Owner Name Native</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_Owner_Name__c</fullName>
        <label>MOT Owner Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_User_Address__c</fullName>
        <label>MOT User Address</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_User_Name_Native__c</fullName>
        <label>MOT User Name Native</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_User_Name__c</fullName>
        <label>MOT User Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_User_Phone__c</fullName>
        <label>MOT User Phone</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_User_Postal__c</fullName>
        <label>MOT User Postal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_lease_extention_Date__c</fullName>
        <label>Maximum lease extention Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Accept_Date__c</fullName>
        <label>Membership Accept Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MileageMaximum__c</fullName>
        <label>MileageMaximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Repayment_Tax__c</fullName>
        <label>Monthly payment amount (including tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Repayment__c</fullName>
        <label>Monthly payment amount (excluding tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Premium2__c</fullName>
        <label>Net premium(2nd Year   long-term policy)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Premium3__c</fullName>
        <label>Net premium(3rd Year   long-term policy)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Premium__c</fullName>
        <label>Net premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Used__c</fullName>
        <label>New/Used Car</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoClaimBonus__c</fullName>
        <label>No Claim Bonus</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_MB_Insurance__c</fullName>
        <label>Non MB Branded Insurance</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Employees__c</fullName>
        <label>Number Of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Interfaced_Contractor__c</fullName>
        <label>Number of Interfaced  Contractor</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Interfaced_Guarantor__c</fullName>
        <label>Number of Interfaced  Guarantor</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation_Type__c</fullName>
        <label>Occupation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self-employed</fullName>
                </value>
                <value>
                    <fullName>Corporate Worker</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Public Officer</fullName>
                </value>
                <value>
                    <fullName>Public Manager</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Employee (Manager)</fullName>
                </value>
                <value>
                    <fullName>Employee (Staff)</fullName>
                </value>
                <value>
                    <fullName>Public Worker</fullName>
                </value>
                <value>
                    <fullName>Part Timer</fullName>
                </value>
                <value>
                    <fullName>Housekeeper</fullName>
                </value>
                <value>
                    <fullName>Pensioner</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Prohibit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offer Prohibit Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outlet_Name__c</fullName>
        <label>Outlet Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Number__c</fullName>
        <inlineHelpText>関連契約番号がある場合、2契約で1契約の扱いとなります。上記契約との合算が必要ですのでご注意ください。</inlineHelpText>
        <label>Dual Pair contract number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_End_Date__c</fullName>
        <label>Payment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Fortnightly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment method of long term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lump-Sum</fullName>
                </value>
                <value>
                    <fullName>Installment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Start_Date__c</fullName>
        <label>Payment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_status_One_Month_Delay__c</fullName>
        <label># of One months delay</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_status_Two_Month_Delay__c</fullName>
        <label># of Two months delay</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payments__c</fullName>
        <label>Number of Payments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Class__c</fullName>
        <label>Policy Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Amount__c</fullName>
        <label>Premium Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Change__c</fullName>
        <label>Change of premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Problem_Actual_Detail__c</fullName>
        <label>Problem Actual Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Actual__c</fullName>
        <label>Problem Actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Detail__c</fullName>
        <label>Problem Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Welcome Plan</fullName>
                </value>
                <value>
                    <fullName>Welcome Plan Plus</fullName>
                </value>
                <value>
                    <fullName>Open End Lease</fullName>
                </value>
                <value>
                    <fullName>Open End Lease (Select)</fullName>
                </value>
                <value>
                    <fullName>Open End Lease (Select Plus)</fullName>
                </value>
                <value>
                    <fullName>Close End Lease</fullName>
                </value>
                <value>
                    <fullName>Close End Lease (Mileage Plan Select)</fullName>
                </value>
                <value>
                    <fullName>Close End Lease (Mileage Plan Select Plus)</fullName>
                </value>
                <value>
                    <fullName>Close End Lease (Mileage Plan)</fullName>
                </value>
                <value>
                    <fullName>Re-lease (Open End)</fullName>
                </value>
                <value>
                    <fullName>Re-lease (Close End Mileage Plan)</fullName>
                </value>
                <value>
                    <fullName>Re-lease (Close End)</fullName>
                </value>
                <value>
                    <fullName>Re-loan</fullName>
                </value>
                <value>
                    <fullName>Super Welcome Plan</fullName>
                </value>
                <value>
                    <fullName>Super Welcome Plan Plus</fullName>
                </value>
                <value>
                    <fullName>Start Up Plan</fullName>
                </value>
                <value>
                    <fullName>Normal Loan</fullName>
                </value>
                <value>
                    <fullName>Dual Auto Loan</fullName>
                </value>
                <value>
                    <fullName>Maintenance Plus</fullName>
                </value>
                <value>
                    <fullName>smart Maintenance Pack Start Plan</fullName>
                </value>
                <value>
                    <fullName>smart Maintenance Pack Second Plan</fullName>
                </value>
                <value>
                    <fullName>smart Maintenance Pack EV Plan</fullName>
                </value>
                <value>
                    <fullName>smart touring support 2 years Plan</fullName>
                </value>
                <value>
                    <fullName>smart touring support 3 years Plan</fullName>
                </value>
                <value>
                    <fullName>smart touring support 6 years Plan</fullName>
                </value>
                <value>
                    <fullName>MyMercedes Support</fullName>
                </value>
                <value>
                    <fullName>smart Maintenance Pack EV Start Plan</fullName>
                </value>
                <value>
                    <fullName>smart Maintenance Pack EV Second Plan</fullName>
                </value>
                <value>
                    <fullName>Maintenance Plus Light</fullName>
                </value>
                <value>
                    <fullName>smart Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Variation__c</fullName>
        <label>Product Variation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Method__c</fullName>
        <label>Purchase Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Month__c</fullName>
        <label>Purchase Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Year__c</fullName>
        <label>Purchase Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Re_lease_Prohibit_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-lease Prohibit flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail Tasks (Related Contact 2)</relationshipLabel>
        <relationshipName>Retail_Tasks9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail Tasks (Related Contact 3)</relationshipLabel>
        <relationshipName>Retail_Tasks10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact 4</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail Tasks (Related Contact 4)</relationshipLabel>
        <relationshipName>Retail_Tasks7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Dealer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please select the proper dealer account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>IntegrationAPI</value>
            </filterItems>
            <infoMessage>Search and select dealer account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail Tasks</relationshipLabel>
        <relationshipName>Retail_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Lead</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>Retail Tasks</relationshipLabel>
        <relationshipName>Retail_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Retail Tasks</relationshipLabel>
        <relationshipName>Retail_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Repair_Type__c</fullName>
        <label>Repair Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residual__c</fullName>
        <label>Residual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_CreatedDate__c</fullName>
        <label>Retail CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Employee_Activity__c</fullName>
        <label>Retail Employee Activity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Id__c</fullName>
        <label>Retail Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_LastModifiedDate__c</fullName>
        <label>Retail LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Dealer Employee</fullName>
                </value>
                <value>
                    <fullName>MB Group Employee</fullName>
                </value>
                <value>
                    <fullName>Demo Car</fullName>
                </value>
                <value>
                    <fullName>Company Car</fullName>
                </value>
                <value>
                    <fullName>Courtesy Car</fullName>
                </value>
                <value>
                    <fullName>Rent-a-Car</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vehicle Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selling_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selling Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail Tasks (Selling Dealer)</relationshipLabel>
        <relationshipName>Retail_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Staff Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Retail_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Amount__c</fullName>
        <label>Service Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>